<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_info_background"
    android:backgroundTint="@color/design_default_color_background"
    android:orientation="horizontal"
    android:padding="10dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/user_settings"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/exp_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#276678"
            android:textSize="18sp"
            android:text="This Be Doth Experiment Name"/>

        <TextView
            android:id="@+id/user_id_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8a8a8a"
            android:paddingLeft="1sp"
            android:textSize="14sp"
            android:text="UserJohnnyBoi"
            />

        <TextView
            android:id="@+id/exp_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8a8a8a"
            android:paddingLeft="1sp"
            android:textSize="12sp"
            android:text="03/12/2021" />

    </LinearLayout>

</LinearLayout>