...
        android:layout_marginTop="32dp"
        android:text="Done"
        app:layout_constraintEnd_toEndOf="@+id/userEmail"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <Button
        android:id="@+id/skipProfileCreationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Skip"
        app:layout_constraintStart_toStartOf="@+id/userEmail"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>
