...
        <TextView
            android:id="@+id/create_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10px"
            android:text="Created Experiments"
            android:textColor="#f6f5f5"
            android:textSize="28sp" />

        <ImageButton
            android:id="@+id/user_image_button"
            android:layout_width="wrap_content"
...
